<resources>
        <string name="app_name">Adient NFC V4</string>
    <string name="protocol_label">Protocol:</string>
    <string name="pick_image_file_cta_text">Load Image</string>
    <string name="cta_new_text_invite">GET PICKLIST SEQ</string>
    <string name="cta_new_graphic_invite">New - Graphic</string>
    <string name="currDisplaySizeDefaultText">Select a Display Size</string>
    <string name="flashButtonText">Flash / Program</string>
    <string name="image_preview_content_description">Image to Flash Preview</string>
    <string name="hold_phone_to_flash_text">Hold Phone Against Eink Display</string>
    <string name="imagePreviewText">Bitmap Preview:</string>
    <string name="pleaseWaitWhileFlashingText">Please wait...</string>
    <string name="reflash_cta_text">Reflash Last Image</string>
    <string name="cta_test_dithering">Test Dithering</string>
</resources>