<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_screen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <Spinner
                    android:id="@+id/spinner_protocol_main"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="6dp"
                    android:background="@color/white"
                    android:paddingStart="10dp"
                    android:paddingEnd="6dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/newTopRightButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/currentDisplaySize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/currDisplaySizeDefaultText"
                    app:layout_constraintEnd_toStartOf="@+id/changeDisplaySizeInvite"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/newTopRightButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="50dp"
                    android:minHeight="50dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="10dp"
                    app:icon="@android:drawable/ic_menu_edit"
                    app:iconPadding="0dp"
                    app:iconGravity="textStart"
                    android:drawablePadding="0dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    app:layout_constraintEnd_toStartOf="@+id/currentDisplaySize"
                    app:layout_constraintTop_toTopOf="parent"
                    android:stateListAnimator="@null"
                    android:elevation="10dp"
                    android:translationZ="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/changeDisplaySizeInvite"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:minWidth="50dp"
                    android:minHeight="50dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="40dp"
                    app:icon="@android:drawable/ic_menu_preferences"
                    app:iconPadding="0dp"
                    app:iconGravity="textStart"
                    android:drawablePadding="0dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:stateListAnimator="@null"
                    android:elevation="10dp"
                    android:translationZ="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:id="@+id/reflashButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
            app:cardBackgroundColor="@color/card_secondary"
            android:layout_marginTop="20dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/imagePreviewCardBody"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/reflashButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="10dp"
                    android:textSize="12pt"
                    android:textColor="@color/blue_darkest"
                    android:text="@string/reflash_cta_text" />

                <ImageView
                    android:id="@+id/reflashButtonImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reflashButtonText"
                    android:layout_marginTop="20dp"
                    android:minWidth="340dp"
                    android:minHeight="240dp"
                    android:padding="10dp"
                    android:contentDescription="@string/image_preview_content_description"
                    app:srcCompat="@android:drawable/stat_sys_warning" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/cta_pick_image_file"
            android:layout_width="241dp"
            android:layout_height="65dp"
            android:layout_marginTop="24dp"
            android:text="@string/pick_image_file_cta_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reflashButton"
            android:visibility="gone" />

        <Button
            android:id="@+id/cta_new_text"
            android:layout_width="241dp"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:text="@string/cta_new_text_invite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cta_pick_image_file" />

        <Button
            android:id="@+id/btn_test_dithering"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cta_test_dithering"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cta_new_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_screen_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settings_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Settings"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/url_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Base URL:"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_label" />

        <EditText
            android:id="@+id/url_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="http://localhost:8080/picklist"
            android:inputType="textUri"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/url_label" />

        <Button
            android:id="@+id/save_url_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save URL"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/url_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>